docker-compose/Template/Temp/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "6"
      kompose.cmd: kompose convert -f ../docker-compose.yml
      kompose.version: 1.26.1 (HEAD)
    creationTimestamp: "2022-09-20T21:40:34Z"
    generation: 22
    labels:
      io.kompose.service: keycloak
    name: keycloak
    namespace: test-project
    resourceVersion: "20368190"
    uid: 57091d16-6303-4a0a-9082-62dbac4b0cd1
  spec:
    progressDeadlineSeconds: 600
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        io.kompose.service: keycloak
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kompose.cmd: kompose convert -f ../docker-compose.yml
          kompose.version: 1.26.1 (HEAD)
        creationTimestamp: null
        labels:
          io.kompose.service: keycloak
      spec:
        containers:
        - env:
          - name: DB_ADDR
            valueFrom:
              configMapKeyRef:
                key: DB_ADDR
                name: keycloak-config
          - name: DB_DATABASE
            valueFrom:
              secretKeyRef:
                key: DATABASE
                name: mariadb-data
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: PASSWORD
                name: mariadb-data
          - name: DB_USER
            valueFrom:
              secretKeyRef:
                key: USER
                name: mariadb-data
          - name: DB_VENDOR
            valueFrom:
              configMapKeyRef:
                key: DB_VENDOR
                name: keycloak-config
          - name: JGROUPS_DISCOVERY_PROTOCOL
            valueFrom:
              configMapKeyRef:
                key: JGROUPS_DISCOVERY_PROTOCOL
                name: keycloak-config
          - name: KEYCLOAK_PASSWORD
            valueFrom:
              secretKeyRef:
                key: PASSWORD
                name: keycloak-data
          - name: KEYCLOAK_USER
            valueFrom:
              secretKeyRef:
                key: USER
                name: keycloak-data
          - name: JGROUPS_DISCOVERY_PROPERTIES
            valueFrom:
              configMapKeyRef:
                key: JGROUPS_DISCOVERY_PROPERTIES
                name: keycloak-config
          image: quay.io/keycloak/keycloak:15.1.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /auth
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: keycloak
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /auth
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: keycloak
        serviceAccountName: keycloak
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 3
    conditions:
    - lastTransitionTime: "2022-09-20T21:40:34Z"
      lastUpdateTime: "2022-09-20T22:56:37Z"
      message: ReplicaSet "keycloak-5786d96bbb" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2022-09-20T23:54:23Z"
      lastUpdateTime: "2022-09-20T23:54:23Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 22
    readyReplicas: 3
    replicas: 3
    updatedReplicas: 3
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kompose.cmd: kompose convert -f ../docker-compose.yml
      kompose.version: 1.26.1 (HEAD)
    creationTimestamp: "2022-09-20T22:19:24Z"
    generation: 4
    labels:
      io.kompose.service: mariadb
    name: mariadb
    namespace: test-project
    resourceVersion: "20231173"
    uid: 3c67a597-f799-4263-9b64-456ec5476d23
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        io.kompose.service: mariadb
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          kompose.cmd: kompose convert -f ../docker-compose.yml
          kompose.version: 1.26.1 (HEAD)
        creationTimestamp: null
        labels:
          io.kompose.service: mariadb
      spec:
        containers:
        - env:
          - name: MYSQL_DATABASE
            valueFrom:
              secretKeyRef:
                key: DATABASE
                name: mariadb-data
          - name: MYSQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: PASSWORD
                name: mariadb-data
          - name: MYSQL_ROOT_PASSWORD
            valueFrom:
              secretKeyRef:
                key: ROOT_PASSWORD
                name: mariadb-data
          - name: MYSQL_USER
            valueFrom:
              secretKeyRef:
                key: USER
                name: mariadb-data
          image: docker.io/mariadb:10.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - mysqladmin
              - ping
              - --silent
            failureThreshold: 3
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 5
          name: mariadb
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2022-09-20T22:19:24Z"
      lastUpdateTime: "2022-09-20T22:20:36Z"
      message: ReplicaSet "mariadb-5d784d4b68" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2022-09-20T22:25:41Z"
      lastUpdateTime: "2022-09-20T22:25:41Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 4
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
