docker-compose/Template/Temp/svc.yaml
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      io.kompose.service: keycloak
    name: keycloak
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: "8443"
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      io.kompose.service: keycloak
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      io.kompose.service: keycloak
    name: keycloak-jgroups
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      io.kompose.service: keycloak
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      io.kompose.service: mariadb
    name: mariadb
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: "3306"
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      io.kompose.service: mariadb
    sessionAffinity: None
    type: ClusterIP
