docker-compose/Template/Temp/route.yaml
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      io.kompose.service: keycloak
    name: keycloak
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: keycloak
      weight: 100
    wildcardPolicy: None
